[package]
name = "garlic"
version = "0.9.1"
authors = ["jonathan"]

[dependencies]
rust-ini = "0.10.0"
getopts = "0.2.14"
error-chain = "0.10.0"
colored = "1.5"
simplelog = "0.4.2"
log = "0.3.8"
stoppable_thread = "0.2.1"
mio = "0.6.9"
case = "0.1.0"
bit_field = "0.8.0"
bytes = "0.4.4"
byteorder = "1.1.0"
structure = "0.1.1"
derive_builder = "0.5.0"
lazy_static = "0.2.8"
enum_primitive = "0.1.1"
num = "0.1.40"
serde = "1.0.11"
serde_derive = "1.0.11"
rmp-serde = "0.13.6"

[features]
test = ["colored/no-color"]
default = []
